--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "toy-robot",
+  "name": "toy-car",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.0.25",
+    "@types/jest": "^27.4.1",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^2.1.3",
     "typescript": "^3.7.4"
   },
   "scripts": {
@@ -41,7 +41,7 @@
     "@types/lodash": "^4.14.149",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "mocha": "^7.0.0",
+    "mocha": "^9.2.1",
     "ts-node": "^8.5.4"
   }
 }
